--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -80,3 +80,36 @@ z_scores(mtcars)
 z_scores(x = y_vec)
 ```
 
+
+## Multiple outputs
+
+give some collections of numbers will produce the mean and sd.
+
+```{r}
+
+mean_and_sd = function(x) {
+  
+  if(!is.numeric(x)){
+    stop("x needs to be numeric")
+  }
+  
+  if(length(x) < 3){
+    stop("x should have at least 3 numbers")
+  }
+  mean_x = mean(x)
+  sd_x = sd(x)
+  
+  output_df = 
+    tibble(
+      mean = mean_x,
+      sd = sd_x
+    )
+  
+  return(output_df)
+}
+
+mean_and_sd(y_vec)
+mean_and_sd(x_vec)
+
+```
+
